--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.myspace</groupId>
-  <artifactId>gobear</artifactId>
+  <artifactId>insurance-rules-demo</artifactId>
   <version>1.0.0</version>
   <packaging>kjar</packaging>
-  <name>gobear</name>
-  <description>gobear demo</description>
+  <name>travel-insurance-rules</name>
+  <description>Travel Insurance Rules Demo</description>
   <dependencies>
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
